--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ dev = [
     "pytest>=8.4.2",
     "ty>=0.0.1a25",
 ]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.22",
+    "mkdocstrings[python]>=0.30.1",
+]
 
 [tool.coverage.report]
 show_missing = true
