--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,38 @@ site_name: crossclient
 site_url: https://sweet-cross.github.io/crossclient/
 theme:
   name: material
+  features:
+    - content.code.annotate
+    - content.code.copy
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - toc.integrate
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 nav:
   - Home: index.md
-  - API: api.md
+  - API Reference: api.md
+
+markdown_extensions:
+  - toc:
+      # Only include <h1> and <h2> headings in the TOC
+      toc_depth: 3
+  - pymdownx.highlight:
+      use_pygments: true
+      pygments_lang_class: true
+      pygments_style: monokai
+  - pymdownx.superfences
+
 plugins:
   - search
   - mkdocstrings:
@@ -13,3 +42,4 @@ plugins:
           options:
             show_source: true
             show_root_toc_entry: false
+            heading_level: 3
