--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ docs = [
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.6.22",
     "mkdocstrings[python]>=0.30.1",
+    "pymdown-extensions>=10.16.1",
 ]
 
 [tool.coverage.report]
