--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: '.python-version'
+          python-version-file: ".python-version"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v3
@@ -25,6 +25,10 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync --all-groups
+
+      - name: Run pre-commit checks
+        run: |
+          uv run pre-commit run --all-files
 
       - name: Run tests with coverage
         run: |
@@ -37,3 +41,6 @@ jobs:
           echo '```' >> $GITHUB_STEP_SUMMARY
           uv run coverage report -m >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "## Pre-commit Checks" >> $GITHUB_STEP_SUMMARY
+          echo "✅ All pre-commit hooks passed" >> $GITHUB_STEP_SUMMARY
