--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,10 @@ dependencies = [
 dev = [
     "coverage>=7.11.0",
     "mypy>=1.18.2",
+    "pandas-stubs>=2.3.2.250926",
+    "pre-commit>=4.3.0",
     "pytest>=8.4.2",
+    "ruff>=0.14.3",
     "ty>=0.0.1a25",
 ]
 docs = [
